--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -1,10 +1,15 @@
 {
   "name": "Dietstory",
   "description": "Launches Dietstory, auto-update files, register/login, etc...",
-  "author": "Kevin X",
-  "version": "0.1.0",
-  "private": true,
+  "author": "Dietstory Team",
+  "version": "1.0.0",
+  "private": false,
   "main": "main-process/electron.js",
+  "homepage": "./",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/allenaerostar/client-launcher.git"
+  },
   "dependencies": {
     "@types/jest": "24.0.21",
     "@types/node": "12.12.3",
@@ -17,9 +22,9 @@
     "concurrently": "^5.0.0",
     "cookie": "^0.4.0",
     "cross-env": "^6.0.3",
-    "electron": "^7.0.0",
-    "electron-builder": "^22.1.0",
     "electron-is-dev": "^1.1.0",
+    "electron-log": "^4.0.0",
+    "electron-updater": "^4.2.0",
     "fs-extra": "^8.1.0",
     "keytar": "^5.0.0",
     "node-sass": "^4.13.0",
@@ -29,6 +34,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
@@ -39,12 +45,12 @@
   "scripts": {
     "rebuild": "electron-rebuild -f -o keytar",
     "react-start": "react-scripts start",
-    "react-build": "react-scripts build",
+    "react-build": "react-scripts build && cp -r \"main-process/.\" \"build/main-process\"",
+    "react-build-win": "react-scripts build && robocopy \"main-process\" \"build\\main-process\" /S",
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
-    "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder --publish=always",
-    "build": "npm run react-build && npm run electron-build",
+    "package": "electron-builder build --win -c.extraMetadata.main=build/main-process/electron.js --publish never",
+    "release": "electron-builder build --win -c.extraMetadata.main=build/main-process/electron.js --publish always",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
@@ -63,7 +69,27 @@
     ]
   },
   "devDependencies": {
+    "electron": "^6.1.7",
+    "electron-builder": "^22.1.0",
     "electron-rebuild": "^1.8.8",
     "redux-devtools": "^3.5.0"
+  },
+  "build": {
+    "appId": "com.electron.dietstorylauncher",
+    "productName": "Dietstory Launcher",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico",
+      "requestedExecutionLevel": "requireAdministrator"
+    },
+    "publish": {
+      "provider": "github",
+      "repo": "client-launcher",
+      "owner": "allenaerostar"
+    }
   }
 }
